--- a/style.css
+++ b/style.css
@@ -8,3 +8,17 @@
 	display: block;
 	background-color: rgba(0, 0, 0, 0.25);
 }
+
+#useFont {
+	opacity: 0;
+	position: absolute;
+	z-index: -100;
+	font-family: 'Arcade';
+}
+
+@font-face {
+	font-family: 'Arcade';
+	src: url('/assets/ArcadeFont.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
